Adding Job Feeds

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-== JobberRails
+== jobberRails
 
-JobberRails is a conversion of the excellent open source php web app, JobberBase, to Rails.
+jobberRails is a conversion of the excellent open source php web app, JobberBase, to Rails.
 
 www.jobberrails.com
 
