--- a/README
+++ b/README
@@ -57,21 +57,31 @@ Jacques Crocker
 railsjedi@gmail.com
 www.railsjedi.com
 
-Handled initial project creation.
+Initial project creation
 
 -- 
 Tyler Crocker
 neorails@gmail.com
 www.neorails.com
 
-Completed Search, RSS, and Admin Sections
+Search, RSS
 
 --
-[Your Name Here]
-[if you start coding now...]
+Szymon Włodarski
+github.com/wlodars
+
+Admin Pages and Login
 
 --
-For more awesome Open Source Rails applications go to www.opensourcerails.com.
+Ivan Acosta-Rubio
+http://www.bakedweb.net
+
+Email Integration Support
+
+--
+
+Rate and comment on this project OpenSourceRails
+http://www.opensourcerails.com/projects/80
 
 
 == Technologies Used
