--- a/README
+++ b/README
@@ -6,7 +6,7 @@ www.jobberrails.com
 
 
 == Current Version
-v0.2
+v0.4
 
 Working:
 - Job Posting
@@ -15,10 +15,12 @@ Working:
 - Feeds
 - Apply Now
 - Ideal Job Form
-
-Coming Soon:
 - Admin Tools
 - Email Verification
+
+TODO: 
+- Bug fixes
+
 
 v1.0 will include all the functionality that currently exists in JobberBase
 
