Updating README to link to Google Group

--- a/README
+++ b/README
@@ -39,6 +39,13 @@ http://jobberrails.crowdsound.com/widgets/content?aid=234
 3) Start server
 
 
+== Email Support
+
+If you have bugs or problems, let us know on the google group http://groups.google.com/group/jobberrails
+
+If we get enough bug tickets, I'll create a lighthouse project. Until then, email should work fine.
+
+
 == Hosted Version
 
 The latest version is currently running on a MorphExchange developer account here:
